@@ -1,0 +1,45 @@
+[Project]
+name: "libfguid"
+status: "alpha"
+description: "a library for GUID/UUID data types"
+features: [
+    "debug_output", "tests",
+    "git", "source_package",
+    "cygwin", "gcc", "mingw", "msvscpp",
+    "dpkg", "rpm"]
+
+[source_package]
+url: "https://googledrive.com/host/0B3fBvzttpiiSRXdGUVRlX2JQWk0/"
+
+[git]
+url: "https://github.com/libyal/libfguid.git"
+
+[tests]
+features: ["valgrind"]
+
+[cygwin]
+build_dependencies: []
+dll_dependencies: [
+    "**TODO describe dependencies**"]
+dll_filename: "cygfguid-0.dll"
+
+[gcc]
+build_dependencies: []
+static_build_dependencies: []
+
+[mingw]
+build_dependencies: []
+dll_dependencies: [
+    "**TODO describe dependencies**"]
+dll_filename: "libfguid-1.dll"
+
+[msvscpp]
+build_dependencies: []
+dll_dependencies: []
+
+[dpkg]
+build_dependencies: []
+
+[rpm]
+build_dependencies: []
+
