@@ -6,6 +6,9 @@ TODO
 * add support for retrieving identifier values
   - add test
 
+20140920
+* changes for project site move
+
 20140105
 * 2014 update
 * updated dependencies
